<resources>

    <!--Main Application Name-->
    <string name="app_name">Louvre Museum </string>
    <string name="copyright">Copyright ©  </string>

    <!--Splash Screen-->
    <string name="please_wait">Please wait while the application loads &#8230;</string>
    <string name="content_description">Image</string>

    <!--Main Menu Strings, for buttons, menus, text views etc.-->
    <string name="btn_view_gallery">View Gallery</string>
    <string name="btn_view_google_maps">Find places near us!</string>
    <string name="btn_set_your_currency">Set your currency</string>
    <string name="menu_information_prices">Information Prices</string>
    <string name="main_menu">Main Menu</string>
    <string name="intro_text">
        Welcome to the world famous Louvre Museum! The application will give you
        as much information as possible to navigate around the museum.
        Please select any of the given options to use the application.
    </string>


    <!--Currency Activity Strings-->
    <string name="selected_currency">Select your currency</string>
    <string-array name="currencies">
        <item>GBP</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <!--Gallery Activity-->
    <string name="title_activity_gallery">Art Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_new_gallery">Enter new gallery</string>
    <string name="enter_artist">Enter Artist</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_room">Enter Room</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_year">Enter Year</string>
    <string name="no_records">No Record Found</string>

    <string name="delete_gallery">You sure you want to delete this gallery?</string>

    <string name="painting">Painting</string>
    <string name="artist">Artist</string>
    <string name="room">Room</string>
    <string name="year">Year</string>


    <string name="go_back">Go Back</string>
    <string name="select_mode">Select Mode</string>
    <string name="title_all">All</string>
    <string name="title_ranked">Ranked</string>
    <string name="title_not_ranked">Not Ranked</string>
    <string name="order_by">Order By</string>
    <string name="order_by_title_and_artist">Artist and Title</string>
    <string name="order_by_title">Title</string>
    <string name="order_by_rank">Rank</string>


    <!--Ticket price-->
    <string name="currency_title"> </string>
    <string name="ticket_price">Ticket Price</string>
    <string name="student_discount">Student Discount</string>
    <string name="currency_info">
        In this page, you have access to change the following:
        Your selected currency, ticket price, updating the latest currency rates and student discount rates.
    </string>

    <string name="refresh">Update Currency Rates</string>
    <string name="exit">Back to main menu</string>


    <string name="ticket_price_edit">Enter the latest ticket price</string>
    <string name="student_discount_edit">Enter new student discount percentage</string>


    <!--Detail Activity-->
    <string name="selected_artist">Artist:</string>
    <string name="selected_year">Year:</string>
    <string name="selected_room">Room:</string>
    <string name="selected_description">Description:</string>
    <string name="edit_gallery">Edit Gallery</string>
    <string name="rate_gallery">Gallery</string>

    <!--Prices Activity-->
    <string name="title_activity_prices">Admission Prices</string>
    <string name="text_price">Price: </string>
    <string name="local_currency">Local currency: </string>
    <string name="your_currency">Your currency: </string>

    <string name="title_activity_louvre_maps">Map</string>


    <!--Louvre Museum Maps-->
    <string-array name="places_selection">
        <item>Restaurants</item>
        <item>Hotels</item>
        <item>Cafe</item>
        <item>Shops</item>
    </string-array>


</resources>
