<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/go_back"
            android:id="@+id/goBack"/>
        <item android:title="@string/select_mode">
            <menu>
                <item
                    android:id="@+id/allGallery"
                    android:title="@string/title_all" />
                <item
                    android:id="@+id/allRanked"
                    android:title="@string/title_ranked" />
                <item
                    android:id="@+id/allNotRanked"
                    android:title="@string/title_not_ranked" />
            </menu>
        </item>
    </group>
    <item android:title="@string/order_by">
        <menu>
            <item
                android:id="@+id/sortArtistAndTitle"
                android:title="@string/order_by_title_and_artist" />
            <item
                android:id="@+id/sortTitle"
                android:title="@string/order_by_title" />
            <item
                android:id="@+id/sortRank"
                android:title="@string/order_by_rank" />
        </menu>
    </item>
</menu>