<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/view_padding" >

    <TextView
        android:id="@+id/text_view_emp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_gallery"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDialogArtistInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/enter_artist"/>

    <EditText
        android:id="@+id/editTextDialogTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/enter_title" />

    <EditText
        android:id="@+id/editTextDialogRoomInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/enter_room" />

    <EditText
        android:id="@+id/editTextDialogDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/enter_description" />

    <EditText
        android:id="@+id/editTextDialogYearInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_year"
        android:inputType="number" />

</LinearLayout>
