<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cet325.bg71ul.assignment.activities.PricesActivity$PlaceholderFragment">

        <TableRow
            android:alpha="1"
            android:id="@+id/tableRowPrices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="43dp"
            >

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/text_price"
                android:textColor="@color/blackText"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/priceCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="30sp">

            </TextView>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="43dp">

            <TextView
                android:id="@+id/localRatesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/local_currency"
                android:textStyle="bold"
                android:textColor="@color/blackText"
                android:textSize="30sp"
                android:layout_gravity="start">

            </TextView>

            <TextView
                android:id="@+id/localRates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textSize="30sp"
                >

            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="43dp">

            <TextView
                android:id="@+id/yourCurrencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="start"
                android:text="@string/your_currency"
                android:textStyle="bold"
                android:textColor="@color/blackText"
                android:textSize="30sp">
            </TextView>

            <TextView
                android:id="@+id/yourCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textSize="30sp">
            </TextView>
        </TableRow>

</TableLayout>