<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.cet325.bg71ul.assignment.activities.DetailActivity"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/imageViewGallery"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/selected_artist"-->
                    <!--android:id="@+id/txtArtistLabel"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textColor="#000000"-->
                    <!--android:textSize="18sp" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/txtArtist"-->
                    <!--android:textColor="#2d2d2d"-->
                    <!--android:textSize="16sp"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:layout_marginLeft="10dp" />-->
            </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarGallery"
                android:layout_gravity="center_horizontal"
                android:stepSize="0.5"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:isIndicator="true" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_artist"
                    android:id="@+id/txtArtistLabel"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtArtist"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_year"
                    android:id="@+id/txtYearLabel"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtYear"
                    android:layout_gravity="center_vertical"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_room"
                    android:id="@+id/txtRoomLabel"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtRoom"
                    android:textColor="#2d2d2d"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_description"
                android:id="@+id/txtDescriptionLabel"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/txtDescription"
                android:textColor="#2d2d2d"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>



    <!---->
     <!--<TextView-->
        <!--android:id="@+id/txtArtist"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@color/blackText"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintHorizontal_bias="0.39"-->
        <!--app:layout_constraintVertical_bias="0.6"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp" />-->

    <!--<TextView-->
        <!--android:id="@+id/txtArtistLabel"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="@string/selected_artist"-->
        <!--android:textSize="18dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="@color/blackText"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.6"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.119"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp" />-->


    <!--<TextView-->
        <!--android:id="@+id/txtYearLabel"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/selected_year"-->
        <!--android:textSize="18dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="@color/blackText"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.119"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--app:layout_constraintVertical_bias="0.66999996" />-->

    <!--<TextView-->
        <!--android:id="@+id/txtYear"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@color/blackText"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintVertical_bias="0.66999996"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--app:layout_constraintHorizontal_bias="0.38" />-->

    <!--<TextView-->
        <!--android:id="@+id/txtDescription"-->
        <!--android:layout_width="333dp"-->
        <!--android:layout_height="112dp"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:text="TextView"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintVertical_bias="1.0"-->
        <!--app:layout_constraintHorizontal_bias="1.0"-->
        <!--tools:layout_editor_absoluteY="391dp"-->
        <!--tools:layout_editor_absoluteX="43dp" />-->


    <!--<TextView-->
        <!--android:id="@+id/txtDescriptionLabel"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/selected_description"-->
        <!--android:textSize="18dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="@color/blackText"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.119"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintVertical_bias="0.74" />-->


